--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   /* border: 10px solid #192b36; */
 
 }
@@ -7,17 +8,19 @@ body {
 img {
   max-width: 100%;
   vertical-align: top;
+  margin: 0;
+  padding:0;
   /* display: none; */
 }
 
-img#responsive {
+img #responsive {
   img#responsive {
-    /* display: none; */
+    display: none;
   }
 }
 
 @media screen and (max-width: 768px){
-  img#responsive{
+  img #responsive{
     display: block;
   }
 }
