--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@ body {
 
 img {
   max-width: 100%;
-  vertical-align: top;
+  /* vertical-align: top; */
   margin: 0;
   padding:0;
   /* display: none; */
