--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  /* border: 10px solid #192b36; */
+  border: 10px solid #192b36;
 
 }
 
@@ -15,7 +15,9 @@ img {
 
 img #responsive {
   img#responsive {
-    display: none;
+    /* display: none; */
+    width: 100%;
+
   }
 }
 
